--- a/public/css/article.css
+++ b/public/css/article.css
@@ -10,39 +10,39 @@ input[type="radio"]{
 .pictures {
     margin-bottom: 2rem;
 }
-.pictures > .imagesGrid{
+.pictures .imagesGrid{
     grid-template-columns: repeat(4,25%);
     grid-template-rows: repeat(5,150px);
 }
-.pictures > .imagesGrid > div {
+.pictures .imagesGrid > div {
     padding: 1rem;
 }
-.pictures > .imagesGrid > div > img{
+.pictures .imagesGrid > div > img{
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.pictures > .imagesGrid > div:nth-child(1){
+.pictures .imagesGrid > div:nth-child(1){
     grid-column: 1 / 4;
     grid-row: 1 / 4;
 
 }
-.pictures > .imagesGrid > div:nth-child(2){
+.pictures .imagesGrid > div:nth-child(2){
     grid-column: 4 / 5;
     grid-row: 1 / 3;
 
 }
-.pictures > .imagesGrid > div:nth-child(3){
+.pictures .imagesGrid > div:nth-child(3){
     grid-column: 4 / 4;
     grid-row: 3 / 4;
 
 }
-.pictures > .imagesGrid > div:nth-child(4){
+.pictures .imagesGrid > div:nth-child(4){
     grid-column: 1 / 3;
     grid-row: 4 / 6;
 
 }
-.pictures > .imagesGrid > div:nth-child(5){
+.pictures .imagesGrid > div:nth-child(5){
     grid-column: 3 / 5;
     grid-row: 4 / 6;
 
@@ -166,7 +166,7 @@ input[type="radio"]{
     padding: 1rem;
     outline: none;
     border: solid white 1px;
-    max-width: 4.5rem;
+    max-width: 80px;
 }
 .question p{
     font-weight: normal;
@@ -191,4 +191,97 @@ input[type="radio"]{
     align-items: center;
     justify-content: space-between;
     margin-bottom: 3rem;
+}
+@keyframes slideLeft {
+    from{
+        translate: -75% 0;
+    }
+    to{
+        translate: -25% 0;
+    }
+    
+}
+@keyframes slideRight {
+    from{
+        translate: -25% 0;
+    }
+    to{
+        translate: -75% 0;
+    }
+    
+}
+.leftArrow, .rightArrow{
+    display: none;
+}
+
+@media screen and (max-width: 900px){
+    #product{
+        padding-inline: 0;
+        margin-top: 100px;
+    }
+    #product .name{
+        padding-inline: 5rem;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    #product .pictures .imagesGrid{
+        display: flex;
+        translate: -25% 0;
+        margin-top: 10rem;
+    }
+    #product .pictures .imagesGrid div{
+        min-width: 50%;
+        max-width: 50%;
+        padding: 0;
+        opacity: 0.5;
+        transition: all 0.5s;
+    }
+    #product .pictures .imagesGrid div.active{
+        opacity: 1;
+        translate: 0 -25px;
+    }
+    #product .pictures .imagesGrid div img{
+        display: block;
+        width: 90%;
+        margin-inline: auto;
+    }
+    .leftArrow, .rightArrow{
+        display: block;
+        position: absolute;
+        top: 50%;
+        padding: 0;
+        margin: 0;
+        transform: translateY(-50%);
+        background: none;
+        border: none;
+        animation: leftNright 2s infinite;
+        z-index: 1;
+    }
+    .leftArrow{
+        left: 0;
+        scale: -1 1;
+        translate: -200% 0;
+    }
+    .rightArrow{
+        translate: 200% 0;
+        right: 0;
+    }
+    .leftArrow img, .rightArrow img{
+        width: 30px;
+    }
+    .infos{
+        max-width: 400px;
+        margin-inline: auto;
+        margin-inline: 0;
+        margin-block: 5rem;
+    }
+    #product .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .infos form > div{
+        margin-block: 5rem;
+    }
+
 }
