--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -151,3 +151,26 @@ a.cta {
     margin-top: 0;
     text-align: right;
 }
+
+@media screen and (max-width: 900px) {
+    .product .infos{
+        height: auto;
+        flex-basis: 50%;
+        align-self: stretch;
+    }
+    .product .amount{
+        height: auto;
+        align-self: stretch;
+    }
+    .product .picture{
+        flex-basis: 20%;
+    }
+    .product h4{
+        font-size: 1.5rem;
+    }
+    .product h3{
+        font-size: 2rem;
+    }
+  
+    
+}
