--- a/public/css/categories.css
+++ b/public/css/categories.css
@@ -2,11 +2,10 @@
 .category h1{
     font-size: 3rem;
     display: flex;
-    white-space: nowrap;
     align-items: center;
     margin-bottom: 3rem;
-    width: fit-content;
     text-transform: none;
+    text-align: left;
     
 }
 .category h1 span{
@@ -113,4 +112,129 @@ div.hidden{
 }
 .categoryName{
     width: fit-content;
+}
+.categoryName a.more{
+    display: none;
+}
+.leftArrow, .rightArrow{
+    display: none;
+}
+@keyframes slideLeft {
+    from{
+        translate: -75% 0;
+    }
+    to{
+        translate: -25% 0;
+    }
+    
+}
+@keyframes slideRight {
+    from{
+        translate: -25% 0;
+    }
+    to{
+        translate: -75% 0;
+    }
+    
+}
+@media screen and (max-width: 900px) {
+    #categories{
+        padding-inline: 5rem;
+    }
+
+    .categoryName{
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        align-items: center;
+        margin-block: 3rem;
+        flex-wrap: wrap;
+    }
+
+    .category{
+        position: relative;
+    }
+    .categoryName h1{
+        margin: 0;
+        margin-bottom: 1rem;
+    }
+    .switch{
+        margin-bottom: 5rem;
+    }
+
+    .categoryName a.more{
+        display: block;
+        font-size: 2.5rem;
+        font-family: Moonic;
+        background: linear-gradient(45deg,#845917,#DAC469 50%);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+        position: relative;
+        margin-bottom: 1rem;
+    }
+    .categoryName a.more:after{
+        content: "";
+        width: 100%;
+        height: 1px;
+        position: absolute;
+        left: 0;
+        bottom: -5px;
+        background: linear-gradient(45deg,#845917,#DAC469 50%);
+    }
+    .work{
+        flex-basis: auto;
+        min-width: 50%;
+        max-width: 50%;
+        opacity: 0;
+        margin: 0;
+        transition: opacity 0.5s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .work > div{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .work h3{
+        font-size: 2.5rem;
+        text-align: center;
+    }
+    .work h4{
+        font-size: 2rem;
+        text-align: center;
+    }
+    .work.active{
+        opacity: 1;
+    }
+    .works{
+        flex-wrap: nowrap;
+        translate: -25% 0;
+        margin-top: 8rem;
+    }
+    .leftArrow, .rightArrow{
+        display: block;
+        position: absolute;
+        top: 50%;
+        padding: 0;
+        margin: 0;
+        transform: translateY(-50%);
+        background: none;
+        border: none;
+        animation: leftNright 2s infinite;
+        z-index: 1;
+    }
+    .leftArrow{
+        left: 0;
+        scale: -1 1;
+        translate: -300% 25%;
+    }
+    .rightArrow{
+        translate:  300% 25%;
+        right: 0;
+    }
+    .leftArrow img, .rightArrow img{
+        width: 30px;
+    }
 }
