--- a/public/css/staff.css
+++ b/public/css/staff.css
@@ -64,23 +64,26 @@
     opacity: 0;
 
 }
-#staff .card:hover img.back{
-    display: block;
-    transform: rotate3d(1,0,0,30deg) translateX(-50%) translateY(50px);
-    opacity: 0.5;
-    margin-inline: auto;
+@media screen and (min-width: 900px){
+    #staff .card:hover img.back{
+        display: block;
+        transform: rotate3d(1,0,0,30deg) translateX(-50%) translateY(50px);
+        opacity: 0.5;
+        margin-inline: auto;
+    
+    }
+    #staff .card:hover img.front{
+        opacity: 1;
+        transform: translateY(-50px);
+        transition-delay: 0.2s;
+    }
+    #staff .card:hover h4{
+        transform: translateY(-50px);
+        transition-delay: 0.2s;
+    }
+}
 
-}
-#staff .card:hover img.front{
-    opacity: 1;
-    transform: translateY(-50px);
-    transition-delay: 0.2s;
 
-}
-#staff .card:hover h4{
-    transform: translateY(-50px);
-    transition-delay: 0.2s;
-}
 #staff h4{
     font-size: 1.8rem;
     font-weight: normal;
@@ -89,5 +92,98 @@
     text-align: center;
     transition: all 0.5s;
     font-family: Montserrat;
+}
+.leftArrow, .rightArrow{
+    display: none;
+}
+@keyframes slideLeft {
+    from{
+        translate: -75% 0;
+    }
+    to{
+        translate: -25% 0;
+    }
+    
+}
+@keyframes slideRight {
+    from{
+        translate: -25% 0;
+    }
+    to{
+        translate: -75% 0;
+    }
+    
+}
+@media screen and (max-width:900px){
+    #staff .category{
+        width: 100%;
+        border: none;
+        padding-bottom: 0;
+        margin-top: 3rem;
+        overflow: hidden;
+    }
+    #staff{
+        padding-inline: 0;
+    }
+    #staff h2{
+        margin-bottom: 5rem;
+        margin-left: 5rem;
+    }
+    #staff .cards{
+        translate: -25% 0;
+        position: relative;
+        width: 100%;
+        transition: transform 0.5s;
+    }
+    #staff .card{
+        opacity: 0.2;
+        min-width: 45%;
+        margin-inline: 2.5%;
+        transition: all 0.5s;
+    }
+    #staff .card.active{
+        opacity: 1;
+        translate: 0 -15px;
+    }
+    #staff .card.active img.back{
+        opacity: 0;
+    }
+    #staff .card.active img.front{
+        opacity: 1;
+    }
+    #staff h4{
+        opacity: 0;
+        font-size: 2rem;
+        transition: all 0.5s;
+        margin-top: 3rem;
+    }
+    #staff .card.active h4{
+        opacity: 1;
+    }
+    .leftArrow, .rightArrow{
+        display: block;
+        position: absolute;
+        top: 50%;
+        padding: 0;
+        margin: 0;
+        transform: translateY(-50%);
+        background: none;
+        border: none;
+        animation: leftNright 2s infinite;
+        z-index: 1;
+    }
+    .leftArrow{
+        left: 0;
+        scale: -1 1;
+        translate: -200% 0;
+    }
+    .rightArrow{
+        translate: 200% 0;
+        right: 0;
+    }
+    .leftArrow img, .rightArrow img{
+        width: 30px;
+    }
+    
 }
 
