--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@
 }
 *{
     font-family: Montserrat;
+    box-sizing: border-box;
 }
 *::selection{
     background-color: #DAC469;
@@ -19,21 +20,8 @@ body{
     flex-direction: column;
     min-height: 100vh;
     font-size: 1.6rem;
+    width: 100vw;
     overflow-x: hidden;
-}
-.background{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: -3;
-    top: 0;
-    left: 0;
-}
-.background img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
 }
 .container{
     margin-inline: auto;
@@ -46,6 +34,11 @@ main{
     display: flex;
     flex-direction: column;
     padding-bottom: 100px;
+    
+}
+main section{
+    max-width: 100vw;
+    overflow-x: clip;
 }
 p{
     font-size: 2rem;
@@ -73,6 +66,7 @@ header{
     transition: all 0.5s;
     display: flex;
     justify-content: center;
+    background-color: #080808;
 }
 header nav{
     display: flex;
@@ -188,7 +182,7 @@ header nav .menu{
 }
 .account img{
     aspect-ratio: 1/1;
-    width: 60px;
+    width: 45px;
     height: auto;
     margin-left: 1rem;
     object-fit: cover;
@@ -231,6 +225,10 @@ header nav > label{
     transform: rotate(-180deg);
     transition: all 0.2s;
 }
+.deroulant.active > a i{
+    transform: rotate(-90deg);
+    transition: all 0.2s;
+}
 .deroulant label{
     cursor: pointer;
     display: none;
@@ -268,9 +266,12 @@ header nav > label{
 footer{
     padding-top: 50px;
     background-color: #080808;
-    width: 90vw;
+    width: 100%;
+    padding-inline: 5vw;
     max-width: 1920px;
     margin-inline: auto;
+    position: relative;
+    z-index: 0;
 }
 .footer_top{
     display: flex;
@@ -356,9 +357,10 @@ footer a{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 300px;
+    width: fit-content;
     margin-inline: auto;
     margin-top: 50px;
+    padding-bottom: 5rem;
 }
 
 .footer_bottom p{
@@ -381,8 +383,7 @@ footer p a{
 }
 .rs{
     display: flex;
-    justify-content: space-between;
-    width: 70%;
+    justify-content: center;
 }
 .rs a{
     aspect-ratio: 1/1;
@@ -396,6 +397,7 @@ footer p a{
     justify-content: center;
     align-items: center;
     border-radius: 100%;
+    margin-inline: 1rem;
 }
 .rs a:hover{
     text-decoration: none;
@@ -406,14 +408,10 @@ section{
     padding: 50px;
 }
 
-header.active{
-    background-color: #080808;
-    transition: all 0.5s;
-}
 #error{
     color: red;
 }
-a#cart{
+header nav #cart{
     background: white;
     width: 7rem;
     height: 7rem;
@@ -428,6 +426,10 @@ a#cart{
     z-index: 3;
     color: white;
     transition: all 0.2s;
+}
+header nav #cart img{
+    margin: 0;
+    border-radius: 0;
 }
 a#cart:hover{
     transform: scale(1.02);
@@ -461,6 +463,207 @@ footer .links span{
 footer .links a{
     margin: 0;
 }
+div#burger{
+    display: none;
+}
+header nav #phoneMenu{
+    display: none;
+}
+
+@media screen and (max-width: 900px) {
+    main{
+        padding-top: 50px;
+        padding-bottom: 0;
+    }
+    section{
+        padding-block: 0;
+        padding-inline: 5rem;
+    }
+    div#burger{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 40px;
+        height: 40px;
+        border: solid white 1px;
+        border-radius: 100%;
+        margin-left: 2rem;
+    }
+    div#burger > div{
+        width: 20px;
+        height: 1px;
+        background-color: white;
+        position: relative;
+        transition: all 0.5s;
+    }
+    header.active div#burger > div{
+        background: none;
+    }
+    div#burger > div::before, div#burger > div::after{
+        content: "";
+        width: 20px;
+        height: 1px;
+        background-color: white;
+        position: absolute;
+        left: 0;
+        transition: all 0.5s;
+    }
+    header.active div#burger > div::before, header.active div#burger > div::after{
+        top: 0;
+    }
+    header.active div#burger > div::before{
+        transform: rotate(45deg);
+    }
+    header.active div#burger > div::after{
+        transform: rotate(-45deg);
+    }
+    div#burger > div::before{
+        top: -5px
+    }
+    div#burger > div::after{
+        top: 5px;
+    }
+    header nav #menu{
+        display: none;
+    }
+    header nav #phoneMenu{
+        display: flex;
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        background-color: #080808;
+        flex-direction: column;
+        align-items: center;
+        transform-origin: right;
+        transform: translateX(100%);
+        transition: all 0.5s;
+    }
+    header.active nav #phoneMenu{
+        transform: translateX(0);
+    }
+    header nav #phoneMenu div.main_links, header nav #phoneMenu > div:last-child{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-block: 2rem;
+    }
+    header nav #phoneMenu div.main_links a{
+        background: linear-gradient(45deg,#845917,#DAC469 50%);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+    }
+    header nav #phoneMenu a{
+        display: block;
+        font-size: 4rem;
+        margin-inline: 0;
+        margin-block: 2rem;
+        font-family: Moonic;
+        text-align: center;
+    }
+    .account .button{
+        display: none;
+    }
+    header > nav > a{
+        flex-basis: auto;
+        position: relative;
+        left: 0;
+        transition: all 0.5s;
+    }
+    header.active > nav > a{
+        left: 50%;
+        translate: -50% 0;
+    }
+    .account{
+        flex-basis: auto;
+        display: flex;
+        align-items: center;
+    }
+    header.active .account a{
+        display: none;
+    }
+    header > nav > a img{
+        height: 60px;
+    }
+    header{
+        width: 100vw;
+    }
+    header .account{
+        align-items: center;
+    }
+    .account img{
+        width: 40px;
+    }
+    footer a{
+        font-size: 1.3rem;
+    }
+    .footer_top p{
+        font-size: 1.3rem;
+    }
+    .rs a{
+        width: 30px;
+        margin-inline: 1rem;
+    }
+    .rs{
+        justify-content: center;
+    }
+    header nav #phoneMenu .menu_deroulant{
+        display: none;
+        position: static;
+        transform: scale(1);
+        padding-top: 0;
+        margin-bottom: 2rem;
+    }
+    header nav #phoneMenu .menu_deroulant a{
+        font-size: 2.5rem;
+        padding: 0;
+        margin-block: 1rem;
+    }
+    header nav #phoneMenu .deroulant.active .menu_deroulant{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
+    header .account a#cart{
+        position: relative;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: none;
+        width: fit-content;
+        height: fit-content;
+    }
+    header .account a#cart img{
+        filter: brightness(0) invert(1);
+    }
+    header .account a#cart #count{
+        width: 10px;
+        height: 10px;
+        color: rgba(255, 255, 255, 0);
+        transform: translateY(0) translateX(25%);
+    }
+    .account img{
+        margin: 0;
+    }
+    .account a{
+        margin-left: 2rem;
+    }
+}
+@media screen and (max-width: 900px) {
+    html{
+        font-size: 50%;
+    }
+    
+}
+@media screen and (max-width: 500px) {
+    html{
+        font-size: 40%;
+    }
+}
 @media screen and (min-width: 900px){
     html {
         font-size: 55%;
@@ -470,4 +673,10 @@ footer .links a{
     html {
         font-size: 62.5%;
     }
+}
+@media screen and (min-width: 2000px){
+    html{
+        font-size: 70%;
+    }
+    
 }
