--- a/public/css/ticketing.css
+++ b/public/css/ticketing.css
@@ -13,6 +13,19 @@
     overflow: visible;
     padding-inline: 0;
 }
+#tickets #validated h1{
+    margin-bottom: 5rem;
+}
+#tickets #validated p{
+    text-align: center;
+    margin-block: 3.5rem;
+}
+#tickets #validated .redirect{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 #tickets .steps{
     display: flex;
     justify-content: space-around;
@@ -105,7 +118,7 @@
 #tickets form table td:not(.description):last-child{
     text-align: right;
 }
-#tickets form button, #validation button{
+#tickets form button, #validation button, #tickets #validated .redirect a{
     background: none;
     border: none;
     color: white;
@@ -120,9 +133,20 @@
     margin-top: 5rem;
     cursor: pointer;
 }
+#tickets #validated .redirect a{
+    margin-inline: 3rem;
+    margin-top: 5rem;
+}
 #tickets form #validation button{
     margin-inline: auto;
     margin-top: 8rem;
+}
+#tickets form #informations .people{
+    margin-block: 3rem;
+}
+#tickets form #informations h3{
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
 }
 #informations{
     width: 100%;
@@ -143,6 +167,9 @@
     font-weight: 300;
     margin-top: 2rem;
     margin-inline: 0;
+}
+#informations .form_section:first-child{
+    margin-bottom: 8rem;
 }
 #informations > label i, #informations .form_section > label i{
     font-weight: 300;
@@ -185,9 +212,109 @@
     max-width: 900px;
     margin-inline: auto;
 }
+
+#confirm{
+    padding: 0;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: brightness(0.3);
+    z-index: 4;
+}
+#confirm > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: solid #DAC469 1px;
+    background-color: #080808;
+    padding: 5rem 8rem;
+}
+#confirm h1{
+    font-size: 4rem;
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+#confirm a{
+    text-decoration: none;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-size: 2rem;
+    font-family: Cabin;
+    display: block;
+    width: fit-content;
+    border-bottom: solid #DAC469 1px;
+    font-family: Montserrat;
+    letter-spacing: 0;
+}
+#confirm p{
+    max-width: 700px;
+    text-align: justify;
+    font-size: 1.8rem;
+}
+#confirm p span{
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    font-weight: normal;
+    font-family: Montserrat;
+    text-decoration: underline;
+    text-decoration-color: #DAC469;
+    text-decoration-thickness: 1px;
+}
+#confirm input{
+    border: solid white 1px;
+    outline: none;
+    color: white;
+    background: none;
+    font-size: 4rem;
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+    text-transform: uppercase;
+    letter-spacing: 2rem;
+    text-indent: 1.5rem;
+    padding: 1rem;
+}
+#confirm form + p{
+    font-style: italic;
+    text-align: center;
+}
+#form .container > p{
+    text-align: center;
+    margin-bottom: 5rem;
+}
+#confirm.hidden{
+    display: none;
+}
+#ticket{
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#ticket h1{
+    font-size: 8rem;
+    text-align: center;
+    color: #DAC469;
+}
 @media screen and (max-width: 900px) {
+    #tickets #validated h1{
+        text-align: center;
+    }
     #tickets .steps h2{
         font-size: 2.5rem;
+    }
+    #confirm > div{
+        max-width: 90%;
+        padding-inline: 5rem;
+    }
+    #confirm h1{
+        text-align: center;
     }
     
 }
