--- a/public/css/work.css
+++ b/public/css/work.css
@@ -38,6 +38,49 @@
 }
 #work .work .thumbnail{
     flex-basis: 45%;
+    position: relative;
+}
+#work .work .thumbnail .links{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(5px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s;
+    opacity: 0;
+}
+@keyframes grow{
+    from{
+        scale: 1;
+    }
+    50%{
+        scale: 1.025;
+    }
+    100%{
+        scale: 1;
+    }
+}
+#work .work .thumbnail.grow{
+    animation: grow 3s infinite;
+}
+#work .work .thumbnail:hover{
+    animation-play-state: paused;
+}
+#work .work .thumbnail .links:hover{
+    opacity: 1;
+}
+#work .work .thumbnail .links a{
+    font-size: 8rem;
+    margin-inline: 2rem;
+}
+#work .work .thumbnail .links a:hover{
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;    
 }
 #work .work .thumbnail img{
     width: 100%;
@@ -92,6 +135,52 @@ section h1{
     font-size: 4rem;
     margin-bottom: 6rem;
     font-family: Moonic;
+}
+#choice{
+    padding-block: 5rem;
+}
+#choice h1{
+    text-align: center;
+}
+#choice form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#choice form .choice{
+    display: flex;
+    justify-content: center;
+}
+#choice form .choice > *{
+    margin-inline: 3rem;
+    display: block;
+    width: fit-content;
+    font-size: 2.5rem;
+    border: solid white 1px;
+    padding: 1rem 4rem;
+    background: linear-gradient(45deg,#845917,#DAC469 50%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+#choice form label{
+    font-size: 4rem;
+    display: block;
+    text-align: center;
+    font-family: Moonic;
+    margin-top: 5rem;
+}
+#choice form textarea{
+    resize: vertical;
+    width: 100%;
+    background: none;
+    max-width: 900px;
+    border: none;
+    border-bottom: solid white 1px;
+    padding-block: 1rem;
+    color: white;
+    font-size: 2rem;
+    margin-top: 5rem;
 }
 section h1 span a{
     background: linear-gradient(45deg,#845917,#DAC469 50%);
@@ -277,6 +366,18 @@ section .works h4{
     }
     .leftArrow img, .rightArrow img{
         width: 30px;
+    }
+    #work .work .thumbnail.grow{
+        animation: none;
+    }
+    #work .work .thumbnail .links{
+        position: static;
+        height: fit-content;
+        opacity: 1;
+        margin-block: 3rem;
+    }
+    #work .work .thumbnail .links a{
+        font-size: 5rem;
     }
     
 }
